# controller/controller.go
@@ -11,6 +11,7 @@ import (
 	notificationapi "github.com/argoproj/notifications-engine/pkg/api"
 	notificationcontroller "github.com/argoproj/notifications-engine/pkg/controller"
 
+	openshiftclientset "github.com/openshift/client-go/route/clientset/versioned"
 	"github.com/pkg/errors"
 	smiclientset "github.com/servicemeshinterface/smi-sdk-go/pkg/gen/client/split/clientset/versioned"
 	log "github.com/sirupsen/logrus"
@@ -151,6 +152,7 @@ func NewManager(
 	argoprojclientset clientset.Interface,
 	dynamicclientset dynamic.Interface,
 	smiclientset smiclientset.Interface,
+	openshiftclientset openshiftclientset.Interface,
 	discoveryClient discovery.DiscoveryInterface,
 	replicaSetInformer appsinformers.ReplicaSetInformer,
 	servicesInformer coreinformers.ServiceInformer,
@@ -222,6 +224,7 @@ func NewManager(
 		DynamicClientSet:                dynamicclientset,
 		RefResolver:                     refResolver,
 		SmiClientSet:                    smiclientset,
+		OpenshiftClientSet:              openshiftclientset,
 		ExperimentInformer:              experimentsInformer,
 		AnalysisRunInformer:             analysisRunInformer,
 		AnalysisTemplateInformer:        analysisTemplateInformer,
